src/objects/Apttus_Config2__FormulaField__c.object
<CustomObject>
    <description>Represents a formula field used in price dimensions and rules</description>
    <fields>
        <fullName>Apttus_Config2__BusinessObject__c</fullName>
        <description>The business object which provides the context for the field</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__LineItem__c</fullName>
                    <default>true</default>
                    <label>Apttus_Config2__LineItem__c</label>
                </value>
                <value>
                    <fullName>Apttus_Config2__OrderLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the field</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Expression__c</fullName>
        <description>The formula expression. Either use field or expression.</description>
        <inlineHelpText>The formula expression. Either use field or expression.</inlineHelpText>
        <label>Expression</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Formula__c</fullName>
        <description>The field formula</description>
        <label>Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The formula use type</description>
        <inlineHelpText>The formula use type</inlineHelpText>
        <label>Use Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                    <default>true</default>
                    <label>Reference</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formula Field (CPQ)</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Description__c</columns>
        <columns>Apttus_Config2__BusinessObject__c</columns>
        <columns>Apttus_Config2__Formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formula Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>